--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ a {
 }
 
 
-.ramka1 {
+.ramka__main {
   background: #F1F1F1;
   max-width: 1160px;
   width: 100%;
@@ -218,7 +218,6 @@ a {
   padding-top: 25px;
 }
 
-
 .back {
   background: #F1F1F1;
   max-width: 1440px;
@@ -226,7 +225,6 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 32px;
 }
 
 .ramka-cont {
